@@ -1,0 +1,31 @@
+Processing test1...
+
+Warnings...
+
+test_input/test1.py:1 Imported module (imp) not used in any function
+test_input/test1.py:1 Imported module (re) not used in any function
+test_input/test1.py:1 No module doc string
+test_input/test1.py:1 Variable (_NOT_USED1) not used in any function
+test_input/test1.py:10 Local variable (m) not used
+test_input/test1.py:10 No global (unknownList) found
+test_input/test1.py:13 self is argument in function
+test_input/test1.py:21 Invalid arguments to (jjj2), got 0, expected between 1 and 3
+test_input/test1.py:25 Invalid arguments to (jjj2), got 4, expected between 1 and 3
+test_input/test1.py:28 Invalid arguments to (ddd), got 0, expected at least 1
+test_input/test1.py:34 No doc string for class X
+test_input/test1.py:34 No doc string for class Y
+test_input/test1.py:35 No global (sys) found
+test_input/test1.py:36 No attribute (__x__) found
+test_input/test1.py:36 No attribute (x) found
+test_input/test1.py:39 self is not first method argument
+test_input/test1.py:40 No global (nofunc) found
+test_input/test1.py:41 Local variable (i) not used
+test_input/test1.py:41 No attribute (a) found
+test_input/test1.py:41 No global (self) found
+test_input/test1.py:42 Function (jjj) doesn't support **kwArgs
+test_input/test1.py:42 Invalid arguments to (jjj), got 3, expected 1
+test_input/test1.py:46 Local variable (asdf) not used
+test_input/test1.py:48 Local variable (j) not used
+test_input/test1.py:48 No global (jjjj) found
+test_input/test1.py:50 No attribute (z) found
+test_input/test1.py:54 Invalid arguments to (xxx), got 2, expected 1
