@@ -1,0 +1,5 @@
+Processing test10...
+
+Warnings...
+
+None
