@@ -1,0 +1,7 @@
+Processing test3...
+
+Warnings...
+
+test_input/test3.py:4 No doc string for class UserDict
+test_input/test3.py:7 No global (x) found
+test_input/test3.py:12 No doc string for class jj
