@@ -1,0 +1,6 @@
+Processing test4...
+
+Warnings...
+
+test_input/test4.py:1 No module doc string
+test_input/test4.py:11 Base class (UserDict.UserDict) __init__() not called
