@@ -1,0 +1,5 @@
+Processing test5...
+
+Warnings...
+
+test_input/test5.py:8 Function (x) uses named arguments
