@@ -1,0 +1,5 @@
+Processing test7...
+
+Warnings...
+
+test_input/test7.py:18 No attribute (y) found
