@@ -1,0 +1,6 @@
+Processing test8...
+  Problem importing module test8 - invalid syntax (test8.py, line 4)
+
+Warnings...
+
+test8:1 NOT PROCESSED UNABLE TO IMPORT
