@@ -1,0 +1,5 @@
+Processing test9...
+
+Warnings...
+
+test_input/test9.py:8 Module (getopt) re-imported locally
