@@ -1,6 +1,7 @@
 
 Version 0.5	- xx xxx 2001
   * Add -g/--allglobals option to report all global warnings, not just first
+  * Add test script and expected results
   * Print all instructions when using debug (-d/--debug)
   * Overhaul internal stack handling so we can look for more problems
   * Fix glob'ing problems (all args after glob were ignored)
